--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "swr": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "8.16.0",
