--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swr": "^2.0.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.1.6",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6"
   }
