add daily price

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-next-app",
+  "name": "helium-stat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,5 +19,20 @@
     "@next/eslint-plugin-next": "^13.1.6",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NikolayMantchev/helium-stats.git"
+  },
+  "keywords": [
+    "helium"
+  ],
+  "author": "N.Mantchev",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/NikolayMantchev/helium-stats/issues"
+  },
+  "homepage": "https://github.com/NikolayMantchev/helium-stats#readme"
 }
