--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "git+https://github.com/NikolayMantchev/helium-stats.git"
   },
   "keywords": [
-    "helium"
+    "helium", "HNT"
   ],
   "author": "N.Mantchev",
   "license": "MIT",
